--- a/src/stories/button.css
+++ b/src/stories/button.css
@@ -8,7 +8,7 @@
   line-height: 1;
 }
 .storybook-button:hover {
-  background-color: green;
+  background-color: red;
 }
 .storybook-button--primary {
   color: white;
